# dtc_docker_teraform

./: .gitignore  README.md
homework/: homework.txt  notebook.ipynb  pyproject.toml  taxi_trip.sql
homework/.virtual_documents/: notebook.ipynb
pipeline/: DockerFile  docker-compose.yml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
terraform/: terraform.tfstate  terraform.tfstate.backup  variables.tf
test/: list_files.py
