[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.2.0",
    "python-lsp-server[all]>=1.14.0",
]
